# obs-coreaudio-encoder-linux

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
ci/: plugin.spec
encoder-proc/: CMakeLists.txt  encoder-proc-version.h.in  encoder-proc.cc  encoder-proc.h  util.c  util.h  windows-imports.h
src/: aac-encoder.cc  plugin-macros.h.in  plugin-main.c  run-proc.c  run-proc.h
